--- a/index.html
+++ b/index.html
@@ -1,140 +1,26 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./fonts/fonts.css" rel="stylesheet">
-    <link href="./styles/global.css" rel="stylesheet">
-    <link href="./styles/style.css" rel="stylesheet">
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body>
-    <header class="header">
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a  href="#" class="header__link header__link-active">главная</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="#lots" class="header__link">посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a href="#about" class="header__link">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header__logo">
-        <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Лого"
-        >
-      </a>
-      <address class="header__address">
-        <a href="tel:+99995555555">+9 999 555 5555</a><br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-        <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
-      </address>
-    </header>
-
-    <main>
-      <section class="cover">
-        <div class="overlay"></div>
-        <h1 class="cover__title">
-          <span class="aligned-text"
-            >о<span class="letter-spacing-extended"
-              >н<span class="no-letter-spacing">о</span></span
-            ></span
-          >
-          <span class="aligned-text aligned-text_center"
-            >те<span class="letter-spacing-extended"
-              >б<span class="no-letter-spacing">е</span></span
-            ></span
-          >
-          <span class="aligned-text aligned-text_right"
-            ><span class="letter-spacing-extended">н</span>ад<span
-              class="no-letter-spacing"
-              >о</span
-            ></span
-          >
-        </h1>
-        <div class="cover__description">
-          <p class="cover__description-text">
-            Аукцион вещей, в которые никто не верил
-          </p>
-          <button class="bet-button">Сделать ставку</button>
-        </div>
-      </section>
-
-      <section class="lots" id="lots">
-        <h2 class="lots__heading">Лоты</h2>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_film">
-                <div class="overlay"></div>
-                <h3 class="card__title">
-                  Фильм режиссёра, который бросил киношколу
-                </h3>
-                <p class="card__text">
-                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                  ставка, если бы вы не знали, что режиссёр — Пол Томас
-                  Андерсон?
-                </p>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_book">
-                <div class="overlay"></div>
-                <h3 class="card__title">
-                  Книга, где описан один скучный день из жизни рекламного агента
-                </h3>
-                <p class="card__text">
-                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                  с переходами на древнеанглийский. В ней одновременно
-                  рассказывается о 16 июня 1904 года и об истории литературы,
-                  начиная с античных времён. И это всё накладывается на
-                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                  Джеймса Джойса?
-                </p>
-              </article>
-            </a>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link" href="#">
-              <article class="card card_type_picture">
-                <div class="overlay"></div>
-                <h3 class="card__title">
-                  Картина, которую повторит даже 5-летний сын маминой подруги
-                </h3>
-                <p class="card__text">
-                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
-              </article>
+              </div>
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+        <a href="#!" class="header__link lots__link">посмотреть больше</a>
       </section>
-
-      <section class="about" id="about">
+      <section class="about">
         <div class="about__column">
           <div class="about__logo">
             <img
               class="about__logo-image"
-              alt="Лого"
               src="./images/logo-white.svg"
-            >
+              alt="Оно тебе надо"
+            />
           </div>
         </div>
-        <div class="about__column">
-          <h2 class="about__title">Об аукционе</h2>
+        <div class="about__column about__description">
+          <h1 class="about__title">Об аукционе</h1>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -156,54 +42,46 @@
         </div>
       </section>
     </main>
-
-    <footer class="footer">
+    <footer>
       <address class="address">
-        <a href="tel:+99995555555">+9 999 555 5555</a><br>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-        <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
+        <div class="header__address-link__list">
+          <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="header__link" href="mailto:mail@example.com"
+            >info@sobaka.ge</a
+          >
+          <p>наб. Принсенграхт 263-265, <br />Амстердам</p>
+        </div>
       </address>
-
       <nav class="footer__menu">
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item">
+            <a class="header__link header__link_active" href="#!">главная</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#lots">посмотреть лоты</a>
+          <li class="footer__links-list-item">
+            <a class="header__link" href="#!">посмотреть лоты</a>
           </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#about">об аукционе</a>
+          <li class="footer__links-list-item">
+            <a class="header__link" href="#!">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <nav class="footer__social-nav">
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img
-                class="footer__social-icon"
-                alt="YouTube"
-                src="./images/yt.svg"
-              >
-            </a>
-          </li> 
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img class="footer__social-icon" alt="VK" src="./images/vk.svg">
-            </a>
-          </li>
-          <li class="footer__social-list-item">
-            <a href="#" class="footer__social-link">
-              <img
-                class="footer__social-icon"
-                alt="Pinterest"
-                src="./images/pinterest.svg"
-              >
-            </a>
-          </li>
-        </ul>
-      </nav>  
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#!"
+            ><img class="footer__social-icon" src="./images/yt.svg" alt="youtube" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#!"
+            ><img class="footer__social-icon" src="./images/vk.svg" alt="vk" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#!"
+            ><img class="footer__social-icon" src="./images/pinterest.svg" alt="pinterest" />
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
