--- a/index.html
+++ b/index.html
@@ -1,4 +1,107 @@
-Ну действительно, там линия, тут кружочек, а здесь и вовсе
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#!">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#!">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#!">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo"
+        ><img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Оно тебе надо"
+      /></a>
+      <address class="address header__address">
+        <div class="header__address-link__list">
+          <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="header__link" href="mailto:mail@example.com"
+            >info@sobaka.ge</a
+          >
+          <p>
+            наб. Принсенграхт 263-<br />
+            265, Амстердам
+          </p>
+        </div>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <div class="cover__title">
+          <h1 class="aligned-text">ОНО</h1>
+          <h1 class="aligned-text_center">ТЕБЕ</h1>
+          <h1 class="aligned-text_right">НАДО</h1>
+        </div>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, вкоторые никто не верил
+          </p>
+          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h1 class="lots__heading">ЛОТЫ</h1>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a href="#!" class="card-link">
+              <div class="card card_type_film">
+                <div class="overlay"></div>
+                <h2 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h2>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#!" class="card-link">
+              <div class="card card_type_book">
+                <div class="overlay"></div>
+                <h2 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h2>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </div>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#!" class="card-link">
+              <div class="card card_type_picture">
+                <div class="overlay"></div>
+                <h2 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h2>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
